# a-maze-ing-42

./: .gitignore  README.md
project/: .gitignore  Makefile  Makefile.bak  README.md  a-maze-ing.toml  a_maze_ing.py  config.txt  install_minilibx.sh  install_minilibx.sh.bak02  install_modules.sh  map_output.txt  pyproject.toml  setup.sh
project/mazegen/: LICENSE  __init__.py  pyproject.toml
project/mazegen/map/: __init__.py
project/mazegen/maze_factory/: __init__.py
project/mazegen/maze_factory/maze/: Maze.py
project/mazegen/maze_path_generators/: __init__.py  base_generator.py  perfect_dfs_generator.py
project/mazegen/maze_solvers/: single_path_solver.py
project/src/: __init__.py  __main__.py  maze.py  utils.py
project/src/collect_config_variables/: __init__.py  config.txt  notes.txt
project/src/map/: __init__.py  map.py
project/src/maze_factory/: __init__.py
project/src/maze_path_generators/: base_generator.py  perfect_dfs_generator.py  simple_generator.py
project/src/maze_solvers/: __init__.py  all_paths_solver.py  base_solver.py  shortest_path_solver.py  single_path_solver.py
project/src/renderer/: AnimationHandlers.py  AppResources.py  Canvas.py  Image.py  MlxContext.py  RendererEngine.py  Renderers.py  Viewport.py  __init__.py  hook_handlers.py  rend.py  renderer.py
project/src/sound_effects_and_music/: __init__.py  sound_managing_class.py
project/tests/: __init__.py  test_maze.py  test_renderer.py  test_renderer02.py  test_renderer03.py  test_renderer04.py  test_renderer05.py  test_renderer06.py  test_sound.py  test_sound_with_maze.py
(+37 files in other folders)
