[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a-maze-ing"
version = "0.1.0"
description = "A-maze-ing Lib"
readme = "README.md"
authors = [{name = "@ecarabal"}, {name = "@swester"}]
requires-python = ">=3.10"
dependencies = [
    # Add standard team dependencies here, for example:
    # "numpy>=1.21.0",
    # "mlx @ file:///${PROJECT_ROOT}/external/minilibx/mlx_CLXV/mlx-2.2-py3-none-any.whl",
]

[tool.setuptools.packages.find]
where = ["src"]