[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A standalone maze generation and solving library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "ecarabal"}, {name = "sam"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]